--- a/flutter_widgets/pubspec.yaml
+++ b/flutter_widgets/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   path_provider: ^2.0.10
   shared_preferences: ^2.0.15
   provider: ^6.0.3
-
+  sqflite: 2.0.3
 
 dev_dependencies:
   flutter_test:
