--- a/flutter_widgets/pubspec.yaml
+++ b/flutter_widgets/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.0.15
   provider: ^6.0.3
   sqflite: 2.0.3
+  get: 4.6.5
 
 dev_dependencies:
   flutter_test:
