--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   pull_to_refresh: 2.0.0
   cached_network_image: 3.0.0
   webview_flutter: 4.0.1
+  get: 4.3.4
+
 
 dev_dependencies:
   flutter_test:
