拼音输入为选中的时候ui调整

--- a/flutter_widgets/ios/Runner/Info.plist
+++ b/flutter_widgets/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>HarmonyOS_Sans_SC_Bold.ttf</string>
+	</array>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
