--- a/flutter_widgets/pubspec.yaml
+++ b/flutter_widgets/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   provider: ^6.0.3
   sqflite: 2.0.3
   get: 4.6.5
+  flutter_easyloading: 3.0.5
+  webview_flutter: 4.4.2
+  flutter_inappwebview: 6.0.0
+  hex: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +67,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  fonts:
+    - family: HM-Bold
+      fonts:
+        - asset: assets/HarmonyOS_Sans_SC_Bold.ttf
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
